cluster/apps/monitoring/scrutiny/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrutiny
  template:
    metadata:
      labels:
        app: scrutiny
    spec:
      containers:
        - name: scrutiny
          image: ghcr.io/analogj/scrutiny:master-web
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /opt/scrutiny/config/scrutiny.yaml
              subPath: scrutiny.yaml
            - name: data
              mountPath: /opt/scrutiny/config/database
              # Ensure this directory is writable
      volumes:
        - name: config
          configMap:
            name: scrutiny-config
        - name: data
          persistentVolumeClaim:
            claimName: scrutiny
