cluster/apps/monitoring/scrutiny/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny
  namespace: monitoring
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: scrutiny
