cluster/apps/monitoring/scrutiny/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrutiny
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "harddisk"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - scrutiny.${SECRET_LAB_DOMAIN}
  rules:
    - host: scrutiny.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrutiny
                port:
                  number: 8080
